--- a/app.json
+++ b/app.json
@@ -12,7 +12,7 @@
       "whatsapp-botto"
     ],
     "website": "https://github.com/Synthesized-Infinity/Whatsapp-Botto-void#readme",
-    "repository": "https://github.com/Synthesized-Infinity/Whatsapp-Botto-void.git",
+    "repository": "https://github.com/Rogers009/Whatsapp-Botto-Void",
     "logo": "https://i.ibb.co/HPqwr9Q/whatsapp-botto-void-init.png",
     "success_url": "/",
     "env": {
